Fix HTML structure and ensure proper formatting

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
         <link rel="stylesheet" href="style.css"/>
         <link rel="icon" type="image/png" href="favicon.png">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-
+<!-- force rebuild -->
     </head>
     <body>
         <div class="container">
@@ -124,4 +124,5 @@
         </section>
 </main>
 </div>
+
 </html>
