--- a/index.html
+++ b/index.html
@@ -15,6 +15,8 @@
                     <span> Warehouse Admin </span>
                     <div>
                     <a href="marta-piechocinska-cv.pdf" class="cv-download-link" download>📄 Download CV</a>
+                    </div>
+
             </div>
                 
             <address>
@@ -125,6 +127,7 @@
 </div>
 
 </html>
+
 
 
 
