--- a/index.html
+++ b/index.html
@@ -24,7 +24,8 @@
                     <li><img class="address-icon circle" src="images/phone.png"/><b> Phone number</b> <a href="tel:07510688521">07510688521 </a></li>
                     <li><img class="address-icon circle"src="images/mail.png"/><b> E-mail</b> <a href="mailto: martapiechocinska34@hotmail.com"> martapiechocinska34@hotmail.com </a> </li>
                     <li><img class="address-icon circle"src="images/birthday-cake.png"/><b>Date of Birth</b> 08/04/1989 </li> 
-                    
+                    <li><img class="address-icon circle" src="images/pin.png" alt="Address icon" /><strong>Address</strong> Hull </li>
+
                     
                 </ul>
             </address>
@@ -152,6 +153,7 @@
 
     </body>    
 </html>
+
 
 
 
